full/dml/y.output
Grammar

    0 $accept: dml_script $end

    1 dml_script: nonempty_attribute_list

    2 nonempty_attribute_list: attribute
    3                        | nonempty_attribute_list attribute

    4 attribute_list: /* empty */
    5               | nonempty_attribute_list

    6 attribute: attribute_key LX_IDENT
    7          | attribute_key LX_STRING
    8          | attribute_key '[' attribute_list ']'

    9 attribute_key: LX_IDENT


Terminals, with rules where they appear

$end (0) 0
'[' (91) 8
']' (93) 8
error (256)
LX_IDENT (258) 6 9
LX_STRING (259) 7


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
dml_script (8)
    on left: 1, on right: 0
nonempty_attribute_list (9)
    on left: 2 3, on right: 1 3 5
attribute_list (10)
    on left: 4 5, on right: 8
attribute (11)
    on left: 6 7 8, on right: 2 3
attribute_key (12)
    on left: 9, on right: 6 7 8


State 0

    0 $accept: . dml_script $end

    LX_IDENT  shift, and go to state 1

    dml_script               go to state 2
    nonempty_attribute_list  go to state 3
    attribute                go to state 4
    attribute_key            go to state 5


State 1

    9 attribute_key: LX_IDENT .

    $default  reduce using rule 9 (attribute_key)


State 2

    0 $accept: dml_script . $end

    $end  shift, and go to state 6


State 3

    1 dml_script: nonempty_attribute_list .
    3 nonempty_attribute_list: nonempty_attribute_list . attribute

    LX_IDENT  shift, and go to state 1

    $default  reduce using rule 1 (dml_script)

    attribute      go to state 7
    attribute_key  go to state 5


State 4

    2 nonempty_attribute_list: attribute .

    $default  reduce using rule 2 (nonempty_attribute_list)


State 5

    6 attribute: attribute_key . LX_IDENT
    7          | attribute_key . LX_STRING
    8          | attribute_key . '[' attribute_list ']'

    LX_IDENT   shift, and go to state 8
    LX_STRING  shift, and go to state 9
    '['        shift, and go to state 10


State 6

    0 $accept: dml_script $end .

    $default  accept


State 7

    3 nonempty_attribute_list: nonempty_attribute_list attribute .

    $default  reduce using rule 3 (nonempty_attribute_list)


State 8

    6 attribute: attribute_key LX_IDENT .

    $default  reduce using rule 6 (attribute)


State 9

    7 attribute: attribute_key LX_STRING .

    $default  reduce using rule 7 (attribute)


State 10

    8 attribute: attribute_key '[' . attribute_list ']'

    LX_IDENT  shift, and go to state 1

    $default  reduce using rule 4 (attribute_list)

    nonempty_attribute_list  go to state 11
    attribute_list           go to state 12
    attribute                go to state 4
    attribute_key            go to state 5


State 11

    3 nonempty_attribute_list: nonempty_attribute_list . attribute
    5 attribute_list: nonempty_attribute_list .

    LX_IDENT  shift, and go to state 1

    $default  reduce using rule 5 (attribute_list)

    attribute      go to state 7
    attribute_key  go to state 5


State 12

    8 attribute: attribute_key '[' attribute_list . ']'

    ']'  shift, and go to state 13


State 13

    8 attribute: attribute_key '[' attribute_list ']' .

    $default  reduce using rule 8 (attribute)
